added info about disk usage

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -60,6 +60,9 @@
             <p class="navbar-text navbar-right"><a href="/login/logout" class="navbar-link">Wyloguj</a></p>
 
             <div class="navbar-text navbar-right" ng-controller="osNavbarController">
+                <span class="text-muted font-small">DISK({{diskName}}):</span>
+                <span class="navbar-width text-left"><b>{{disk}} %</b></span>
+
                 <span class="text-muted font-small">MEM:</span>
                 <span class="navbar-width text-left"><b>{{mem}} %</b></span>
 
