--- a/views/index.ejs
+++ b/views/index.ejs
@@ -46,7 +46,8 @@
         <!-- Brand and toggle get grouped for better mobile display -->
 
         <div class="navbar-header">
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
+                    data-target="#bs-example-navbar-collapse-1">
                 <span class="sr-only">Toggle navigation</span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
@@ -68,6 +69,9 @@
 
                 <span class="text-muted font-small">CPU:</span>
                 <span class="navbar-width text-left"><b>{{cpu}} %</b></span>
+
+                <span class="text-muted font-small">CORE TEMP:</span>
+                <span class="navbar-width text-left"><b>{{core_temp}} C</b></span>
             </div>
         </div>
 
