--- a/views/index.ejs
+++ b/views/index.ejs
@@ -38,6 +38,8 @@
         .font-small {
             font-size: 0.7em;
         }
+
+
     </style>
 </head>
 <body ng-app="myModule">
@@ -60,7 +62,9 @@
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <p class="navbar-text navbar-right"><a href="/login/logout" class="navbar-link">Wyloguj</a></p>
 
+
             <div class="navbar-text navbar-right" ng-controller="osNavbarController">
+
                 <span class="text-muted font-small">DISK({{diskName}}):</span>
                 <span class="navbar-width text-left"><b>{{disk}} %</b></span>
 
@@ -73,6 +77,8 @@
                 <span class="text-muted font-small">CORE TEMP:</span>
                 <span class="navbar-width text-left"><b>{{core_temp}} C</b></span>
             </div>
+
+
         </div>
 
 
@@ -93,54 +99,23 @@
         <% } %>
     </div>
 
-    <div>
-        <h3>Sum</h3>
 
-        <div class="row">
-            <div class="col-xs-2">PCPU:</div>
-            <div class="col-xs-10">{{psSum.PCPU}} %</div>
-        </div>
-        <div class="row">
-            <div class="col-xs-2">PMEM:</div>
-            <div class="col-xs-10">{{psSum.PMEM}} %</div>
-        </div>
-        <div style="margin-top:20px;"></div>
-    </div>
     <div>
-        <table class="small col-xs-12">
-            <thead>
-            <tr>
-                <th>USER</th>
-                <th>PID</th>
-                <th>PCPU</th>
-                <th>PMEM</th>
-                <th>VSZ</th>
-                <th>RSS</th>
-                <th>TTY</th>
-                <th>STAT</th>
-                <th>START</th>
-                <th>TIME</th>
-                <!--<th >COMMAND</th>-->
-            </tr>
-            </thead>
-            <tbody>
-            <tr ng-repeat="i in ps">
-                <td>{{i.USER}}</td>
-                <td>{{i.PID}}</td>
-                <td>{{i.PCPU}}</td>
-                <td>{{i.PMEM}}</td>
-                <td>{{i.VSZ}}</td>
-                <td>{{i.RSS}}</td>
-                <td>{{i.TTY}}</td>
-                <td>{{i.STAT}}</td>
-                <td>{{i.START}}</td>
-                <td>{{i.TIME}}</td>
-                <!--<td>{{i.COMMAND}}</td>-->
-            </tr>
+        <h3>Temps</h3>
 
-            </tbody>
-        </table>
+        <ul>
+            <div ng-repeat="t in temps" class="row" style="display: flex; align-items: baseline;">
+                <div class="col-xs-4">
+                    <span class="displa" style="font-size: 1.5em">{{t.name}}</span>
+                    <span class="text-muted">({{t.id}})</span></div>
+                <div class="col-xs-6" style="text-align: right">
+                    <span class="displa" style="font-size: 2em">{{t.temp.toFixed(1)}} C</span>
+                </div>
+                <div class="col-xs-2" ng-hide="t.crcCorrect">CRC ERROR</div>
+            </div>
+        </ul>
     </div>
+
 
 </div>
 
