--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,8 +4,13 @@
 <head>
     <meta charset="utf-8"/>
     <title>RPi</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+
     <link rel="shortcut icon" href="/Raspberry-Pi.png" type="image/png"/>
     <script type="text/javascript" src="js/jquery-2.1.1.js"></script>
+    <script type="text/javascript" src="js/flot-0.8.3/flot/jquery.flot.js"></script>
+    <script type="text/javascript" src="js/flot-0.8.3/flot/jquery.flot.time.js"></script>
+
     <script type="text/javascript" src="angular-1.3.4/angular.js"></script>
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="css/bootstrap.min.css">
@@ -19,6 +24,7 @@
     <script type="text/javascript" src="/t/app.js"></script>
     <script type="text/javascript" src="/t/myController.js"></script>
     <script type="text/javascript" src="/t/osNavbarController.js"></script>
+
 
 
     <script type="text/javascript">
@@ -105,19 +111,26 @@
 
         <ul>
             <div ng-repeat="t in temps" class="row" style="display: flex; align-items: baseline;">
-                <div class="col-xs-4">
+                <div class="col-xs-5">
                     <span class="displa" style="font-size: 1.5em">{{t.name}}</span>
-                    <span class="text-muted">({{t.id}})</span></div>
-                <div class="col-xs-6" style="text-align: right">
+                    <!--<span class="text-muted">({{t.id}})</span>-->
+                </div>
+                <div class="col-xs-5" style="text-align: right">
                     <span class="displa" style="font-size: 2em">{{t.temp.toFixed(1)}} C</span>
                 </div>
-                <div class="col-xs-2" ng-hide="t.crcCorrect">CRC ERROR</div>
+                <div class="col-xs- text-danger" ng-hide="t.crcCorrect">CRC ERROR</div>
             </div>
         </ul>
     </div>
+    <div>
+        <h3>Temp plot</h3>
+        <div id="plot" style="width: 100%; height: 400px; border: 1px #000000 solid;"></div>
 
+    </div>
 
 </div>
+
+
 
 </body>
 </html>
