--- a/views/login.ejs
+++ b/views/login.ejs
@@ -3,7 +3,8 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>RPi</title>
+    <title>RPi Login</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <link rel="shortcut icon" href="/Raspberry-Pi.png" type="image/png"/>
     <script type="text/javascript" src="js/jquery-2.1.1.js"></script>
     <script type="text/javascript" src="angular-1.3.4/angular.js"></script>
