--- a/views/index.ejs
+++ b/views/index.ejs
@@ -24,7 +24,7 @@
     <script type="text/javascript" src="/t/app.js"></script>
     <script type="text/javascript" src="/t/myController.js"></script>
     <script type="text/javascript" src="/t/osNavbarController.js"></script>
-
+    <script type="text/javascript" src="/t/tempPlotController.js"></script>
 
 
     <script type="text/javascript">
@@ -92,10 +92,9 @@
 </nav>
 
 
-<h1 class="text-center">My RPi</h1>
-<hr/>
-
-<div class="container" ng-controller="myController">
+<div class="container">
+    <h1 class="text-center">My RPi</h1>
+    <hr/>
 
     <div>
         <% if  ( anyError ) { %>
@@ -106,7 +105,7 @@
     </div>
 
 
-    <div>
+    <div ng-controller="myController">
         <h3>Temps</h3>
 
         <ul>
@@ -122,14 +121,22 @@
             </div>
         </ul>
     </div>
-    <div>
-        <h3>Temp plot</h3>
-        <div id="plot" style="width: 100%; height: 400px; border: 1px #000000 solid;"></div>
+    <div ng-controller="tempPlotController">
+        <div style="position: relative; overflow: hidden">
+            <h3 style="display: inline-block">Temp plot</h3>
+
+            <div style="float: right; margin: 20px 0 10px 0">
+                <select class="form-control" ng-model="selectedHistory" ng-options="h.text for h in listsOfHistories">
+                </select>
+            </div>
+        </div>
+
+
+        <div id="plot" style="width: 100%; height: 400px;"></div>
 
     </div>
 
 </div>
-
 
 
 </body>
