--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,12 +12,14 @@
     <script type="text/javascript" src="js/flot-0.8.3/flot/jquery.flot.time.js"></script>
 
     <script type="text/javascript" src="angular-1.3.4/angular.js"></script>
+    <script type="text/javascript" src="angular-1.3.4/angular-route.js"></script>
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="css/bootstrap.min.css">
 
     <!-- Optional theme -->
-    <link rel="stylesheet" href="css/bootstrap-theme.min.css">
 
+    <!--<link rel="stylesheet" href="css/bootstrap-theme.min.css">-->
+    <link rel="stylesheet" href="css/bootstrap-theme-yeti.min.css">
     <!-- Latest compiled and minified JavaScript -->
     <script src="js/bootstrap.min.js"></script>
 
@@ -25,6 +27,7 @@
     <script type="text/javascript" src="/t/myController.js"></script>
     <script type="text/javascript" src="/t/osNavbarController.js"></script>
     <script type="text/javascript" src="/t/tempPlotController.js"></script>
+    <script type="text/javascript" src="/t/linkNavbarController.js"></script>
 
 
     <script type="text/javascript">
@@ -45,11 +48,10 @@
             font-size: 0.7em;
         }
 
-
     </style>
 </head>
 <body ng-app="myModule">
-<nav class="navbar navbar-default" role="navigation">
+<nav class="navbar navbar-default navbar-static-top" role="navigation">
     <div class="container-fluid">
         <!-- Brand and toggle get grouped for better mobile display -->
 
@@ -62,12 +64,27 @@
                 <span class="icon-bar"></span>
             </button>
             <a class="navbar-brand" href=""><img alt="Brand" src="/Raspberry-Pi.png" style="width: 20px; height: 20px;"></a>
+            <p loading class="navbar-text"><span class="glyphicon glyphicon-refresh text-muted" aria-hidden="true"></span></p>
+
         </div>
 
 
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-            <p class="navbar-text navbar-right"><a href="/login/logout" class="navbar-link">Wyloguj</a></p>
 
+
+            <ul class="nav navbar-nav" ng-controller="linkNavbarController">
+                <li active-link="active"><a href="#/actual-temp.html">Temperature</a></li>
+                <li active-link="active"><a href="#/temp-history.html">Temperatures history</a></li>
+            </ul>
+
+
+
+
+
+            <ul class="nav navbar-nav navbar-right">
+                <li><a href="/login/logout" class="navbar-link">Wyloguj</a></li>
+
+            </ul>
 
             <div class="navbar-text navbar-right" ng-controller="osNavbarController">
 
@@ -101,43 +118,44 @@
         <div class="alert alert-info" role="alert">
             <pre><%= massages %></pre>
         </div>
-        <% } %>
+        <% }; %>
     </div>
 
+    <div ng-view></div>
 
-    <div ng-controller="myController">
-        <h3>Temps</h3>
-
-        <ul>
-            <div ng-repeat="t in temps" class="row" style="display: flex; align-items: baseline;">
-                <div class="col-xs-5">
-                    <span class="displa" style="font-size: 1.5em">{{t.name}}</span>
-                    <!--<span class="text-muted">({{t.id}})</span>-->
-                </div>
-                <div class="col-xs-5" style="text-align: right">
-                    <span class="displa" style="font-size: 2em">{{t.temp.toFixed(1)}} C</span>
-                </div>
-                <div class="col-xs- text-danger" ng-hide="t.crcCorrect">CRC ERROR</div>
-            </div>
-        </ul>
-    </div>
-    <div ng-controller="tempPlotController">
-        <div style="position: relative; overflow: hidden">
-            <h3 style="display: inline-block">Temp plot</h3>
-
-            <div style="float: right; margin: 20px 0 10px 0">
-                <select class="form-control" ng-model="selectedHistory" ng-options="h.text for h in listsOfHistories">
-                </select>
-            </div>
-        </div>
-
-
-        <div id="plot" style="width: 100%; height: 400px;"></div>
-
-    </div>
 
 </div>
 
 
 </body>
 </html>
+
+
+<script type="text/ng-template" id="actual-temp.html">
+    <h3>Temps</h3>
+    <ul>
+        <div ng-repeat="t in temps" class="row" style="display: flex; align-items: baseline;">
+            <div class="col-xs-5">
+                <span class="displa" style="font-size: 1.5em">{{t.name}}</span>
+                <!--<span class="text-muted">({{t.id}})</span>-->
+            </div>
+            <div class="col-xs-2"><span class="text-danger" ng-hide="t.crcCorrect">CRC ERROR</span></div>
+            <div class="col-xs-5" style="text-align: right">
+                <span class="displa" style="font-size: 2em">{{t.temp.toFixed(1)}} C</span>
+            </div>
+        </div>
+    </ul>
+</script>
+
+<script type="text/ng-template" id="temp-history.html">
+    <div style="position: relative; overflow: hidden">
+        <h3 style="display: inline-block">Temp plot</h3>
+
+        <div style="float: right; margin: 20px 0 10px 0">
+            <select class="form-control" ng-model="selectedHistory" ng-options="h.text for h in listsOfHistories"
+                    ng-change="loadData()">
+            </select>
+        </div>
+    </div>
+    <div id="plot" style="width: 100%; height: 400px;"></div>
+</script>
