--- a/views/index.ejs
+++ b/views/index.ejs
@@ -28,6 +28,7 @@
     <script type="text/javascript" src="/t/osNavbarController.js"></script>
     <script type="text/javascript" src="/t/tempPlotController.js"></script>
     <script type="text/javascript" src="/t/linkNavbarController.js"></script>
+    <script type="text/javascript" src="/t/tempComparePlotController.js"></script>
     <!--<script type="text/javascript" src="/t/plotDirective.js"></script>-->
 
 
@@ -78,6 +79,7 @@
             <ul class="nav navbar-nav" ng-controller="linkNavbarController">
                 <li active-link="active"><a href="#/actual-temp.html">Temperature</a></li>
                 <li active-link="active"><a href="#/temp-history.html">Temperatures history</a></li>
+                <li active-link="active"><a href="#/temp-compare-history.html">Compare temperature history</a></li>
             </ul>
 
 
@@ -151,7 +153,8 @@
 
     <div style="position: relative; overflow: hidden">
         <div style=" margin: 20px 0 10px 0">
-            <select class="form-control" style="float: right; width:auto; margin:10px 0px 10px 10px;" ng-model="selectedHistory" ng-options="h.text for h in listsOfHistories"
+            <select class="form-control" style="float: right; width:auto; margin:10px 0px 10px 10px;"
+                    ng-model="selectedHistory" ng-options="h.text for h in listsOfHistories"
                     ng-change="loadData()">
             </select>
         </div>
@@ -160,13 +163,21 @@
 
 </script>
 
-<script type="text/ng-template" id="temp-plot.html">
+<script type="text/ng-template" id="temp-compare-history.html">
+
     <div style="position: relative; overflow: hidden">
-        <div style="float: right; margin: 20px 0 10px 0">
-            <select class="form-control" ng-model="selectedHistory" ng-options="h.text for h in listsOfHistories"
+        <div style=" margin: 20px 0 10px 0">
+            <select class="form-control" style="float: right; width:auto; margin:10px 0px 10px 10px;"
+                    ng-model="SelectedB" ng-options="h.text for h in ListB"
+                    ng-change="loadData()">
+            </select>
+            <select class="form-control" style="float: right; width:auto; margin:10px 0px 10px 10px;"
+                    ng-model="SelectedA" ng-options="h.text for h in ListA"
                     ng-change="loadData()">
             </select>
         </div>
     </div>
-    <div class="divForPlot" style="width: 100%; height: 400px;"></div>
+
+    <div id="plot" style="width: 100%; height: 400px;"></div>
+
 </script>
