Code refactor, tool tip added, new idea of inheritance of device Now if system can not connect to the sensor device while 5 min then the 5 min have undefined status else (if at last on status received then)  5 minute hav defined status.

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -214,10 +214,10 @@
         <div class="alert alert-info" role="alert">
             <pre><%= massages %></pre>
         </div>
-        <% }; %>
+        <% };; %>
     </div>
 
-    <div ng-view></div>
+    <div id="viewContainer" ng-view></div>
 
 
 </div>
