--- a/views/index.ejs
+++ b/views/index.ejs
@@ -14,7 +14,7 @@
     <script type="text/javascript" src="/angular-1.3.4/angular.js"></script>
     <script type="text/javascript" src="/angular-1.3.4/angular-route.js"></script>
     <!-- Latest compiled and minified CSS -->
-    <link rel="stylesheet" href="/css/bootstrap.min.css">
+    <!--<link rel="stylesheet" href="/css/bootstrap.min.css">-->
     <!-- http://fortawesome.github.io -->
     <link rel="stylesheet" href="/css/font-awesome.min.css">
 
@@ -214,7 +214,7 @@
         <div class="alert alert-info" role="alert">
             <pre><%= massages %></pre>
         </div>
-        <% };; %>
+        <% }; %>
     </div>
 
     <div id="viewContainer" ng-view></div>
