--- a/views/index.ejs
+++ b/views/index.ejs
@@ -30,7 +30,7 @@
     <script src="/js/bootstrap.min.js"></script>
 
     <script type="text/javascript" src="/t/app.js"></script>
-    <script type="text/javascript" src="/t/myController.js"></script>
+    <script type="text/javascript" src="/t/actualTempController.js"></script>
     <script type="text/javascript" src="/t/osNavbarController.js"></script>
     <script type="text/javascript" src="/t/tempPlotController.js"></script>
     <script type="text/javascript" src="/t/linkNavbarController.js"></script>
