--- a/views/index/actualTemp.ejs
+++ b/views/index/actualTemp.ejs
@@ -1,7 +1,21 @@
 <script type="text/ng-template" id="actual-temp.html">
     <h3>Temps</h3>
     <ul>
-        <div ng-repeat="t in temps" class="row" style="display: flex; align-items: baseline;" title="{{t.description}}">
+        <!--<div ng-repeat="t in temps" class="row" style="display: flex; align-items: baseline;" title="{{t.description}}">-->
+            <!--<div class="col-xs-5">-->
+                <!--<span class="displa" style="font-size: 1.5em">{{t.name}}</span>-->
+                <!--&lt;!&ndash;<span class="text-muted">({{t.id}})</span>&ndash;&gt;-->
+
+            <!--</div>-->
+            <!--<div class="col-xs-2"><span class="text-danger" ng-hide="t.crcCorrect">CRC ERROR</span></div>-->
+            <!--<div class="col-xs-3" style="text-align: right">-->
+                <!--<span class="displa" style="font-size: 2em">{{t.temp.toFixed(1)}} C</span>-->
+            <!--</div>-->
+            <!--<div class="col-xs-2"></div>-->
+        <!--</div>-->
+
+        <div ng-repeat="t in tempSensorList" class="row" style="display: flex; align-items: baseline;"
+             title="{{t.description}}">
             <div class="col-xs-5">
                 <span class="displa" style="font-size: 1.5em">{{t.name}}</span>
                 <!--<span class="text-muted">({{t.id}})</span>-->
@@ -9,9 +23,11 @@
             </div>
             <div class="col-xs-2"><span class="text-danger" ng-hide="t.crcCorrect">CRC ERROR</span></div>
             <div class="col-xs-3" style="text-align: right">
-                <span class="displa" style="font-size: 2em">{{t.temp.toFixed(1)}} C</span>
+                <span class="displa"
+                      style="font-size: 2em">{{ t.temp != null ? t.temp.toFixed(1) +' C' : '--'}} </span>
             </div>
             <div class="col-xs-2"></div>
         </div>
+
     </ul>
 </script>
